2002-07-07  Maciej Stachowiak  <mjs@apple.com>

        WebCore part of fix for Radar 2953431 - JavaScript window.close()
	method is not working

        * khtml/ecma/kjs_window.cpp:
        (Window::scheduleClose): In AppleChanges
        * khtml/khtml_part.cpp:
        (KHTMLPart::openedByJS): Call kwq implementations, because we need
	to remember the openedByJS state across location changes, which in
	our case means replacing the part.
        (KHTMLPart::setOpenedByJS): Likewise.
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPartImpl::openedByJS): Implement by calling bridge.
        (KWQKHTMLPartImpl::setOpenedByJS): Likewise.
        (KWQKHTMLPartImpl::close): Likewise.
        * kwq/KWQKHTMLPartImpl.h: Prototype new PartImpl methods.
        * kwq/WebCoreBridge.h: Prototype new bridge methods.

2002-07-06  Darin Adler  <darin@apple.com>

        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPartImpl::write): Remove reference
	to nonexistent class in a comment.
        * kwq/KWQKHTMLPartImpl.h: Remove unused and unimplemented getDataSource().

2002-07-04  Maciej Stachowiak  <mjs@apple.com>

	Say "Go to" instead of "Link to" for links that won't open a new
	window. Also, the code is now set up to change the status text
	when modifier keys are pressed, but the code is disabled for now
	because it's impossible to do reliably.
	
        * khtml/khtml_part.cpp:
        (KHTMLPart::overURL):
        (KHTMLPart::khtmlMouseMoveEvent):
        * khtml/khtml_part.h:

2002-07-03  Darin Adler  <darin@apple.com>

	A small KURL speed improvement.

        * khtml/misc/loader.cpp:
        (Cache::requestImage):
        (Cache::requestStyleSheet):
        (Cache::requestScript):
	Don't do the isMalformed check, because it's expensive and has no clear benefit.
	There's no harm in caching null results for malformed URLs.

        * kwq/KWQKURL.mm:
        (KURL::KURL): Make the default constructor faster by not running all the
	normalize code on the empty string.

=== Alexander-11 ===
